--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:04:00 AM</p>
+    <p class="lastupdate">09/06/2020 02:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.913 inHg (0.003)</td>
+        <td class="data">29.914 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">83.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          332
+          333
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          332
+          333
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:16:01 AM">
-            31</span><br/>
+          <span title="02:07:01 AM">
+            32</span><br/>
           <span title="12:51:01 AM">
             29</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:16:01 AM (Sunday)">
-            31</span><br/>
+          <span title="02:07:01 AM (Sunday)">
+            32</span><br/>
           <span title="12:51:01 AM (Sunday)">
             29</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 11 hours, 17 minutes</td>
+      <td class="data">4 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 11 hours, 17 minutes</td>
+      <td class="data">4 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
