--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 02:34:00 AM</p>
+    <p class="lastupdate">09/06/2020 02:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.7&#176;F</td>
+        <td class="data">47.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">38%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.918 inHg (0.001)</td>
+        <td class="data">29.919 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="02:33:05 AM">
-            74.7</span>
+          <span title="02:34:57 AM">
+            74.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="02:33:05 AM (Sunday)">
-            74.7</span>
+          <span title="02:34:57 AM (Sunday)">
+            74.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:05 AM" class="loval">
-            74.7</span>
+          <span title="02:34:57 AM" class="loval">
+            74.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:05 AM (Sunday)" class="loval">
-            74.7</span>
+          <span title="02:34:57 AM (Sunday)" class="loval">
+            74.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="02:24:39 AM">
-            37</span><br/>
+          <span title="02:37:29 AM">
+            38</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:24:39 AM (Sunday)">
-            37</span><br/>
+          <span title="02:37:29 AM (Sunday)">
+            38</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          334
+          336
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          334
+          336
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="01:58:01 AM">
-            83.5</span>
+          <span title="02:37:01 AM">
+            83.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="01:58:01 AM (Sunday)">
-            83.5</span>
+          <span title="02:37:01 AM (Sunday)">
+            83.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 11 hours, 47 minutes</td>
+      <td class="data">4 days, 11 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 11 hours, 47 minutes</td>
+      <td class="data">4 days, 11 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
