--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:04:00 AM</p>
+    <p class="lastupdate">09/06/2020 03:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.5&#176;F</td>
+        <td class="data">47.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.913 inHg (0.002)</td>
+        <td class="data">29.917 inHg (0.006)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.2&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="02:50:09 AM">
-            74.0</span>
+          <span title="03:08:57 AM">
+            73.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="02:50:09 AM (Sunday)">
-            74.0</span>
+          <span title="03:08:57 AM (Sunday)">
+            73.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:50:09 AM" class="loval">
-            74.0</span>
+          <span title="03:08:57 AM" class="loval">
+            73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:50:09 AM (Sunday)" class="loval">
-            74.0</span>
+          <span title="03:08:57 AM (Sunday)" class="loval">
+            73.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          335
+          332
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          335
+          332
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="03:03:01 AM">
-            82.2</span>
+          <span title="03:08:01 AM">
+            82.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="03:03:01 AM (Sunday)">
-            82.2</span>
+          <span title="03:08:01 AM (Sunday)">
+            82.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 12 hours, 17 minutes</td>
+      <td class="data">4 days, 12 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 12 hours, 17 minutes</td>
+      <td class="data">4 days, 12 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
