--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:24:00 AM</p>
+    <p class="lastupdate">09/06/2020 03:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.3&#176;F</td>
+        <td class="data">73.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.3&#176;F</td>
+        <td class="data">73.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.3&#176;F</td>
+        <td class="data">73.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.8&#176;F</td>
+        <td class="data">47.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">40%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (0.009)</td>
+        <td class="data">29.916 inHg (0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="03:14:25 AM">
-            73.3</span>
+          <span title="03:27:55 AM">
+            73.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="03:14:25 AM (Sunday)">
-            73.3</span>
+          <span title="03:27:55 AM (Sunday)">
+            73.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:14:25 AM" class="loval">
-            73.3</span>
+          <span title="03:27:55 AM" class="loval">
+            73.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:14:25 AM (Sunday)" class="loval">
-            73.3</span>
+          <span title="03:27:55 AM (Sunday)" class="loval">
+            73.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          331
+          329
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          331
+          329
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 12 hours, 37 minutes</td>
+      <td class="data">4 days, 12 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 12 hours, 37 minutes</td>
+      <td class="data">4 days, 12 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
